k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: kubeopt-website
  namespace: kubeopt-com
  labels:
    app: kubeopt-website
    app.kubernetes.io/name: kubeopt-website
    app.kubernetes.io/component: website
  annotations:
    service.beta.kubernetes.io/azure-load-balancer-internal: "false"
spec:
  type: ClusterIP
  ports:
  - port: 80
    targetPort: 5000
    protocol: TCP
    name: http
  selector:
    app: kubeopt-website
  sessionAffinity: None
---
apiVersion: v1
kind: Service
metadata:
  name: kubeopt-website-nodeport
  namespace: kubeopt-com
  labels:
    app: kubeopt-website
    app.kubernetes.io/name: kubeopt-website
    app.kubernetes.io/component: website
  annotations:
    service.beta.kubernetes.io/azure-load-balancer-internal: "false"
spec:
  type: NodePort
  ports:
  - port: 80
    targetPort: 5000
    protocol: TCP
    name: http
    nodePort: 30080
  selector:
    app: kubeopt-website
  sessionAffinity: None
